# tritip

./: .gitignore  README.md  dune-project  tritip.opam
.github/workflows/: build.yml
lib/: display.ml  dune  input.ml  lesson.ml  menu.ml  screens.ml  session.ml  stats.ml  types.ml
test/: dune
